# clinical-llm-calibration

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: harm_rubric.yaml  high_acuity_keywords.yaml  models.yaml  prompts.yaml  strata.yaml
data/processed/: eval_set_v0.1.meta.json  eval_set_v0.2_fast.meta.json  eval_set_v0.3_fast.meta.json  pmc_high_acuity_v0.2.meta.json
docs/: DECISIONS.md  PROGRESS.md
results/: abstention_summary_v0.1.json  calibration_summary_v0.1.json  grading_v0.1.meta.json
scripts/: 00_test_hf_connection.py  01_explore_medqa.py  02_explore_medmcqa.py  03_explore_hpo.py  04_explore_disease_names.py  05_test_rarebench_converter.py  06_explore_pmc_patients.py  07_filter_pmc_high_acuity.py  08_save_pmc_high_acuity.py  09_build_dataset_flow_figure.py  10_test_unified_loaders.py  11_build_eval_set.py  12_test_groq.py  13_test_call_model.py  14_test_parser.py  15_test_cache.py  16_test_run_case.py  17_inspect_biomistral_raw.py  18_test_medgemma.py  19_pilot_run.py  20_run_inference.py  21_build_eval_set_fast.py  22_build_eval_set_mini.py  23_test_grader.py  24_grade_all.py  25_figure_reliability.py  26_test_uq_signals.py  27_attach_uq_signals.py  28_figure_abstention_frontier.py  29_build_harm_rating_sheet.py  build_rubric_pdf.py
src/calibration/: ece.py  uq_signals.py
src/data/: filters.py  loaders.py  pmc_patients.py  rarebench.py  schema.py
src/grading/: grader.py
src/models/: cache.py  inference.py  parser.py  prompts.py  run_case.py
