[project]
name = "clinical-llm-calibration"
version = "0.1.0"
description = "Long-tail calibration failure in clinical LLMs"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
